# anthropics___buffa

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  README.md  Taskfile.yml  rust-toolchain.toml
.changes/: 0.9.0.md
.changes/unreleased/: added-20260629-144131.yaml  added-20260707-175656.yaml  added-20260708-011513.yaml  added-20260717-010402.yaml  breaking-changes-20260626-204917.yaml  changed-20260711-134422.yaml  changed-20260715-220900.yaml  changed-20260715-223000.yaml  changed-20260716-200231.yaml  fixed-20260702-212901.yaml  fixed-20260702-235813.yaml  fixed-20260708-014500.yaml  fixed-20260712-104526.yaml  fixed-20260712-104637.yaml  fixed-20260715-135840.yaml  fixed-20260716-193632.yaml
.github/workflows/: ci.yml  cla.yaml  publish-crates.yml
benchmarks/buffa/: Cargo.toml  build.rs
benchmarks/buffa/benches/: analytics_event.rs  api_response.rs  column_batch.rs  common.rs  google_message1.rs  log_record.rs  media_frame.rs  mesh.rs  packed_tile.rs  protobuf.rs  reflect.rs
benchmarks/buffa/src/: lib.rs
benchmarks/datasets/: column_batch.pb
benchmarks/gen-datasets/src/: main.rs
benchmarks/history/: README.md  annotations.md  build-align-variants.sh
benchmarks/proto/: bench_messages.proto  check-iso-protos.py
benchmarks/proto/iso/: column_batch.proto
buffa/: Cargo.toml
buffa-build/: Cargo.toml
buffa-build/src/: lib.rs
buffa-codegen/: Cargo.toml
buffa-codegen/src/: comments.rs  context.rs  defaults.rs  enumeration.rs  feature_gates.rs  feature_overrides.rs  features.rs  impl_message.rs  impl_text.rs  imports.rs  lazy_view.rs  lib.rs  message.rs  oneof.rs  reflect.rs  reflect_owned.rs  reflect_view.rs  view.rs
buffa-codegen/src/tests/: generation.rs  idiomatic_imports.rs  mod.rs  naming.rs  proto2.rs  reflect_view.rs  repeated_type.rs  view_codegen.rs
buffa-codegen/tests/: codegen_integration.rs
buffa-descriptor/: Cargo.toml
buffa-descriptor/src/: lib.rs  pool.rs
buffa-descriptor/src/reflect/: containers.rs  dynamic.rs  json.rs  json_wkt.rs  message.rs  mod.rs  value.rs  view.rs
buffa-descriptor/tests/: dynamic_e2e.rs  json_e2e.rs  pool_e2e.rs
buffa-remote-derive/: Cargo.toml
buffa-remote-derive/src/: box_ptr.rs  bytes.rs  lib.rs  list.rs  map.rs  remote_field.rs  string.rs
buffa-remote-derive/tests/: map_storage.rs  proto_box.rs  proto_bytes.rs  proto_list.rs  proto_string.rs
buffa-smolstr/: Cargo.toml
buffa-smolstr/src/: lib.rs
buffa-test/: Cargo.toml  build.rs
buffa-test/protos/: idiomatic_imports.proto  idiomatic_imports_dep.proto  open_enums.proto  open_enums_enum_rule.proto  open_enums_no_unknowns.proto  repeated_type.proto  vtable_bytes_repr.proto  vtable_no_views.proto  vtable_string_repr.proto
buffa-test/src/: lib.rs
buffa-test/src/tests/: closed_enum.rs  element_memory_limit.rs  idiomatic_imports.rs  mod.rs  open_enums.rs  owned_view.rs  proto3_semantics.rs  repeated_type.rs  string_type.rs  type_prefix.rs
buffa-test/tests/: reflect_vtable.rs  reflectable.rs  vtable_bytes_repr.rs  vtable_no_views.rs  vtable_string_repr.rs
buffa-types/: Cargo.toml
buffa-types/src/: duration_jiff.rs  lib.rs  timestamp_ext.rs  timestamp_jiff.rs
buffa-types/tests/: wkt_reflect.rs
buffa-yaml/: Cargo.toml
buffa/src/: encoding.rs  enumeration.rs  error.rs  json_helpers.rs  lib.rs  map_codec.rs  message.rs  message_field.rs  types.rs  view.rs
buffa/src/json_helpers/: tests.rs
conformance/: Cargo.toml  Dockerfile  build.rs  known_failures_view_vtable.txt  run-conformance.sh
conformance/src/: main.rs
docs/: guide.md  migration-from-prost.md  migration-from-protobuf.md
docs/investigations/: reflection-vtable.md
examples/bsr-quickstart/: Cargo.toml
examples/buffa-smolstr/src/: lib.rs
examples/custom-types/: Cargo.toml  README.md
examples/custom-types/src/types/: flex_str.rs
protoc-gen-buffa/: Cargo.toml
protoc-gen-buffa-packaging/: Cargo.toml
protoc-gen-buffa/src/: main.rs
